--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,33 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	lvgl/lvgl@^9.2.2
-	bodmer/TFT_eSPI@^2.5.43
+    lvgl/lvgl@^9.2.2
+    bodmer/TFT_eSPI@^2.5.43
+
+build_flags =
+
+; TFT screen configuration
+    -D USER_SETUP_LOADED=1
+    -D USER_SETUP_ID=42
+    -D ILI9341_DRIVER
+    -D TFT_MISO=12                          ; MISO Pin
+    -D TFT_MOSI=13                          ; MOSI Pin
+    -D TFT_SCLK=14                          ; SCLK Pin
+    -D TFT_CS=15                            ; Chip Select Pin
+    -D TFT_DC=26                            ; Data/Command Pin
+    -D TFT_BL=27                            ; Backlight Pin
+    -D TFT_RST=-1                           ; Reset Pin
+    -D LOAD_GLCD                            ; Font 1: 8 pixels
+    -D LOAD_FONT2                           ; Font 2: 16 pixels
+    -D LOAD_FONT4                           ; Font 4: 26 pixels
+    -D LOAD_FONT6                           ; Font 6: 48 pixels (digits)
+    -D LOAD_FONT7                           ; Font 7: 7 segments of 48 pixels
+    -D LOAD_FONT8                           ; Font 8: 75 pixels (digits)
+    -D LOAD_GFXFF                           ; FreeFonts
+    -D SMOOTH_FONT                          ; Smooth font
+    -D SPI_FREQUENCY=40000000               ; SPI frequency for the TFT
+    -D SPI_READ_FREQUENCY=16000000          ; SPI read frequency for the TFT
+    -D SPI_TOUCH_FREQUENCY=2500000          ; SPI frequency for the touch controller
