--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@ lib_deps =
 
 build_flags =
 
-; TFT screen configuration
+    ; TFT screen configuration
     -D USER_SETUP_LOADED=1
     -D USER_SETUP_ID=42
     -D ILI9341_DRIVER
@@ -31,3 +31,14 @@ build_flags =
     -D SPI_FREQUENCY=40000000               ; SPI frequency for the TFT
     -D SPI_READ_FREQUENCY=16000000          ; SPI read frequency for the TFT
     -D SPI_TOUCH_FREQUENCY=2500000          ; SPI frequency for the touch controller
+
+    ; LVGL configuration
+    -I src/lvgl
+    -D LV_CONF_INCLUDE_SIMPLE
+    -D LV_COLOR_DEPTH=16
+    -D LV_USE_TFT_ESPI=1
+    -D LV_USE_THEME_DEFAULT=1
+    -D LV_THEME_DEFAULT_DARK=0
+    -D TFT_HOR_RES=320
+    -D TFT_VER_RES=240
+    -D TFT_ROTATION=LV_DISPLAY_ROTATION_0
