--- a/platformio.ini
+++ b/platformio.ini
@@ -6,35 +6,39 @@ monitor_speed = 115200
 lib_deps = 
     lvgl/lvgl@^9.2.2
     bodmer/TFT_eSPI@^2.5.43
+    esphome/AsyncTCP-esphome@^2.1.4
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
+    luisllamasbinaburo/I2CScanner@^1.0.1
 
 build_flags =
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 
     ; TFT screen configuration
     -D USER_SETUP_LOADED=1
     -D USER_SETUP_ID=21
     -D ILI9488_DRIVER
-    -D TFT_MISO=12                          ; MISO Pin
-    -D TFT_MOSI=13                          ; MOSI Pin
-    -D TFT_SCLK=14                          ; SCLK Pin
-    -D TFT_CS=15                            ; Chip Select Pin
-    -D TFT_DC=26                            ; Data/Command Pin
-    -D TFT_BL=27                            ; Backlight Pin
-    -D TFT_RST=-1                           ; Reset Pin
-    -D LOAD_GLCD                            ; Font 1: 8 pixels
-    -D LOAD_FONT2                           ; Font 2: 16 pixels
-    -D LOAD_FONT4                           ; Font 4: 26 pixels
-    -D LOAD_FONT6                           ; Font 6: 48 pixels (digits)
-    -D LOAD_FONT7                           ; Font 7: 7 segments of 48 pixels
-    -D LOAD_FONT8                           ; Font 8: 75 pixels (digits)
-    -D LOAD_GFXFF                           ; FreeFonts
-    -D SMOOTH_FONT                          ; Smooth font
-    -D SPI_FREQUENCY=40000000               ; SPI frequency for the TFT
-    -D SPI_READ_FREQUENCY=16000000          ; SPI read frequency for the TFT
-    -D SPI_TOUCH_FREQUENCY=2500000          ; SPI frequency for the touch controller
+    -D TFT_MISO=12
+    -D TFT_MOSI=13
+    -D TFT_SCLK=14
+    -D TFT_CS=15
+    -D TFT_DC=26
+    -D TFT_BL=27
+    -D TFT_RST=-1
+    
+    ; LVGL fonts
+    -D LV_FONT_MONTSERRAT_18=1
+    -D LV_FONT_MONTSERRAT_24=1
+
+    ; SPI configuration
+    -D SPI_FREQUENCY=40000000
+    -D SPI_READ_FREQUENCY=16000000
+    -D SPI_TOUCH_FREQUENCY=2500000
 
     ; LVGL configuration
+    -D LV_CONF_INCLUDE_SIMPLE=1
+    -I src/config
     -I src/lvgl
-    -D LV_CONF_INCLUDE_SIMPLE
     -D LV_COLOR_DEPTH=16
     -D LV_USE_TFT_ESPI=1
     -D LV_USE_THEME_DEFAULT=1
