basic web ui function working via websocket

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,48 +1,54 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    lvgl/lvgl@^9.2.2
-    bodmer/TFT_eSPI@^2.5.43
-    esphome/AsyncTCP-esphome@^2.1.4
+	lvgl/lvgl@^9.2.2
+	bodmer/TFT_eSPI@^2.5.43
+	esphome/AsyncTCP-esphome@^2.1.4
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
-    luisllamasbinaburo/I2CScanner@^1.0.1
-
-build_flags =
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
-
-    ; TFT screen configuration
-    -D USER_SETUP_LOADED=1
-    -D USER_SETUP_ID=21
-    -D ILI9488_DRIVER
-    -D TFT_MISO=12
-    -D TFT_MOSI=13
-    -D TFT_SCLK=14
-    -D TFT_CS=15
-    -D TFT_DC=26
-    -D TFT_BL=27
-    -D TFT_RST=-1
-    
-    ; LVGL fonts
-    -D LV_FONT_MONTSERRAT_18=1
-    -D LV_FONT_MONTSERRAT_24=1
-
-    ; SPI configuration
-    -D SPI_FREQUENCY=40000000
-    -D SPI_READ_FREQUENCY=16000000
-    -D SPI_TOUCH_FREQUENCY=2500000
-
-    ; LVGL configuration
-    -D LV_CONF_INCLUDE_SIMPLE=1
-    -I src/config
-    -I src/lvgl
-    -D LV_COLOR_DEPTH=16
-    -D LV_USE_TFT_ESPI=1
-    -D LV_USE_THEME_DEFAULT=1
-    -D LV_THEME_DEFAULT_DARK=0
-    -D TFT_HOR_RES=320
-    -D TFT_VER_RES=480
-    -D TFT_ROTATION=LV_DISPLAY_ROTATION_180
+	luisllamasbinaburo/I2CScanner@^1.0.1
+	bblanchon/ArduinoJson@^7.4.1
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	
+	-D USER_SETUP_LOADED=1
+	-D USER_SETUP_ID=21
+	-D ILI9488_DRIVER
+	-D TFT_MISO=12
+	-D TFT_MOSI=13
+	-D TFT_SCLK=14
+	-D TFT_CS=15
+	-D TFT_DC=26
+	-D TFT_BL=27
+	-D TFT_RST=-1
+	
+	-D LV_FONT_MONTSERRAT_18=1
+	-D LV_FONT_MONTSERRAT_24=1
+	
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=16000000
+	-D SPI_TOUCH_FREQUENCY=2500000
+	
+	-D LV_CONF_INCLUDE_SIMPLE=1
+	-I src/config
+	-I src/lvgl
+	-D LV_COLOR_DEPTH=16
+	-D LV_USE_TFT_ESPI=1
+	-D LV_USE_THEME_DEFAULT=1
+	-D LV_THEME_DEFAULT_DARK=0
+	-D TFT_HOR_RES=320
+	-D TFT_VER_RES=480
+	-D TFT_ROTATION=LV_DISPLAY_ROTATION_180
