--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
-theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
 markdown: kramdown
 title: Electronic Load Project
 description: Official documentation for the DIY Electronic Load
